// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tools suits should create prefetch tag 1`] = `
Object {
  "attributes": Object {
    "href": "/hello.jpg",
    "rel": "prefetch",
  },
  "selfClosingTag": false,
  "tagName": "link",
  "voidTag": true,
}
`;

exports[`tools suits should create preload tag 1`] = `
Object {
  "attributes": Object {
    "as": "font",
    "crossorigin": "anonymous",
  },
  "selfClosingTag": false,
  "tagName": "link",
  "voidTag": true,
}
`;
